--- a/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
@@ -97,7 +97,7 @@ msgstr "Developer Edition"
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:20
 #: wp-content/themes/teamlab-blog-2-0/footer.php:36
 msgid "Document Builder"
-msgstr "Document Builder"
+msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:21
 #: wp-content/themes/teamlab-blog-2-0/footer.php:42
@@ -259,7 +259,7 @@ msgstr "Contribuir"
 #: wp-content/themes/teamlab-blog-2-0/footer.php:145
 #: wp-content/themes/teamlab-blog-2-0/header.php:372
 msgid "Webinars"
-msgstr "Webinarios"
+msgstr "Webinars"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:70
 #: wp-content/themes/teamlab-blog-2-0/footer.php:172
@@ -300,17 +300,41 @@ msgstr "Síganos en:"
 msgid "Ascensio System SIA"
 msgstr "Ascensio System SIA"
 
+#: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:125 wp-content/themes/teamlab-blog-2-0/footer.php:266
+msgid "."
+msgstr ""
+
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:125
 #: wp-content/themes/teamlab-blog-2-0/footer.php:266
 msgid "All rights reserved"
 msgstr "Todos los derechos reservados"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:39
+#: wp-content/themes/teamlab-blog-2-0/footer.php:79
 msgid "Solutions"
 msgstr "Soluciones"
 
+#: wp-content/themes/teamlab-blog-2-0/footer.php:120
+msgid "Perform your tasks"
+msgstr "Realiza tus tareas"
+
+#: wp-content/themes/teamlab-blog-2-0/footer.php:120
+msgid "Convert text files"
+msgstr "Convierte archivos de texto"
+
+#: wp-content/themes/teamlab-blog-2-0/footer.php:120
+msgid "Convert spreadsheets"
+msgstr "Convierte hojas de cálculo"
+
+#: wp-content/themes/teamlab-blog-2-0/footer.php:120
+msgid "Convert presentations"
+msgstr "Convierte presentaciones"
+
+#: wp-content/themes/teamlab-blog-2-0/footer.php:120
+msgid "Convert PDFs"
+msgstr "Convierte PDFs"
+
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:44
-#: wp-content/themes/teamlab-blog-2-0/footer.php:81
 msgid "SOLUTIONS BY SIZE"
 msgstr "SOLUCIONES POR TAMAÑO"
 
@@ -362,7 +386,7 @@ msgstr "Educación"
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:83
 #: wp-content/themes/teamlab-blog-2-0/footer.php:122
 msgid "Nonprofits"
-msgstr "Organizaciones sin ánimo de lucro"
+msgstr "Organizaciones sin fines de lucro"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:88
 msgid "Customer stories"
@@ -372,6 +396,10 @@ msgstr "Historias de clientes"
 #: wp-content/themes/teamlab-blog-2-0/header.php:161
 msgid "Products & Features"
 msgstr "Productos"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:174
+msgid "Docs overview"
+msgstr "Resumen de Docs"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:99
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:160
@@ -383,7 +411,7 @@ msgstr "Editor de documentos"
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:102
 #: wp-content/themes/teamlab-blog-2-0/header.php:167
 msgid "Docs Enterprise"
-msgstr "Editor de documentos"
+msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:105
 #: wp-content/themes/teamlab-blog-2-0/header.php:169
@@ -515,7 +543,7 @@ msgid "Commercial packages"
 msgstr "Paquetes comerciales"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:200
-msgid "Desktop and mobile apps"
+msgid "Desktop & mobile apps"
 msgstr "Apps de escritorio y para móviles"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:203
@@ -527,6 +555,10 @@ msgstr "Comparación de las ediciones"
 #: wp-content/themes/teamlab-blog-2-0/header.php:332
 msgid "Partners"
 msgstr "Socios"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:349
+msgid "Technology partners"
+msgstr "Socios tecnológicos"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:213
 #: wp-content/themes/teamlab-blog-2-0/header.php:336
@@ -578,6 +610,10 @@ msgstr "Premios"
 msgid "Events"
 msgstr "Eventos"
 
+#: wp-content/themes/teamlab-blog-2-0/header.php:352
+msgid "Meet the ONLYOFFICE team"
+msgstr "Conoce al equipo de ONLYOFFICE"
+
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:250
 #: wp-content/themes/teamlab-blog-2-0/header.php:369
 msgid "Press downloads"
@@ -594,16 +630,24 @@ msgid "Gift shop"
 msgstr "Tienda de regalos"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:173
-msgid "PDF reader&converter"
+msgid "PDF reader & converter"
 msgstr "Lector y convertidor de PDF"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:216
-msgid "See it in action"
-msgstr "Verlo en acción"
+msgid "See it in action!"
+msgstr "¡Verlo en acción!"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:220
 msgid "Curious to know what the interface looks like and try the main functionality?"
-msgstr "Tienes curiosidad por saber cómo es la interfaz y probar las características principales?"
+msgstr "¿Tienes curiosidad por saber cómo es la interfaz y probar las características principales?"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:295
+msgid "Web hosting"
+msgstr "Alojamiento web"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:298
+msgid "Get web hosting from some of the best providers"
+msgstr "Consigue hosting web de algunos de los mejores proveedores"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:259
 #: wp-content/themes/teamlab-blog-2-0/header.php:364
@@ -845,24 +889,36 @@ msgid "DESKTOP&MOBILE APPS"
 msgstr "Aplicaciones de escritorio y para móviles"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:242
-msgid "OTHER INTEGRATIONS"
+msgid "Other Integrations"
 msgstr "Otras integraciones"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:280
-msgid "API documentation"
+msgid "API Documentation"
 msgstr "Documentación de la API"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:290
+msgid "Bundles"
+msgstr "Paquetes"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:283
 msgid "Code on GitHub"
-msgstr "Código en GitHub"
+msgstr "GitHub"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:214
-msgid "OFORMS"
+msgid "OFORMs"
 msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:218
 msgid "OFORMS, free <span class=\"nowrap\">ready-to-fill</span> out online document forms"
 msgstr "OFORMS, formularios gratuitos de documentos listos para rellenar en línea"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:249
+msgid "Conversion API"
+msgstr "API de conversión"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:252
+msgid "Get it now"
+msgstr "Obtener ahora"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:243
 msgid "Redmine"
@@ -875,6 +931,10 @@ msgstr ""
 #: wp-content/themes/teamlab-blog-2-0/header.php:248
 msgid "For developers"
 msgstr "Para desarrolladores"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:288
+msgid "For community"
+msgstr "Para la comunidad"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:252
 msgid "Integrate ONLYOFFICE Docs to bring document editing to your app users"
