--- a/wp-content/themes/teamlab-blog-2-0/languages/pt_BR.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/pt_BR.po
@@ -89,7 +89,7 @@ msgstr "Developer Edition"
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:20
 #: wp-content/themes/teamlab-blog-2-0/footer.php:36
 msgid "Document Builder"
-msgstr "Document Builder"
+msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:21
 #: wp-content/themes/teamlab-blog-2-0/footer.php:42
@@ -299,17 +299,41 @@ msgstr "Siga-nos em:"
 msgid "Ascensio System SIA"
 msgstr ""
 
+#: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:125 wp-content/themes/teamlab-blog-2-0/footer.php:266
+msgid "."
+msgstr ""
+
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:125
 #: wp-content/themes/teamlab-blog-2-0/footer.php:266
 msgid "All rights reserved"
 msgstr "Todos os direitos reservados"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:39
+#: wp-content/themes/teamlab-blog-2-0/footer.php:79
 msgid "Solutions"
 msgstr "SOLUÇÕES"
 
+#: wp-content/themes/teamlab-blog-2-0/footer.php:120
+msgid "Perform your tasks"
+msgstr "Realizar suas tarefas"
+
+#: wp-content/themes/teamlab-blog-2-0/footer.php:120
+msgid "Convert text files"
+msgstr "Converter arquivos de texto"
+
+#: wp-content/themes/teamlab-blog-2-0/footer.php:120
+msgid "Convert spreadsheets"
+msgstr "Converter planilhas"
+
+#: wp-content/themes/teamlab-blog-2-0/footer.php:120
+msgid "Convert presentations"
+msgstr "Converter apresentações"
+
+#: wp-content/themes/teamlab-blog-2-0/footer.php:120
+msgid "Convert PDFs"
+msgstr "Converter PDFs"
+
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:44
-#: wp-content/themes/teamlab-blog-2-0/footer.php:81
 msgid "SOLUTIONS BY SIZE"
 msgstr "SOLUÇÕES POR TAMANHO"
 
@@ -527,6 +551,14 @@ msgstr "Parceiros"
 msgid "Affiliates"
 msgstr "Afiliados"
 
+#: wp-content/themes/teamlab-blog-2-0/header.php:355
+msgid "Technology partners"
+msgstr "Parceiros de tecnologia"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:363
+msgid "Meet the ONLYOFFICE team"
+msgstr "Conheça a equipe do ONLYOFFICE"
+
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:216
 #: wp-content/themes/teamlab-blog-2-0/header.php:334
 msgid "Resellers"
@@ -535,7 +567,7 @@ msgstr "Revendedores"
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:219
 #: wp-content/themes/teamlab-blog-2-0/header.php:335
 msgid "Find partners"
-msgstr "Encontarar parceiros"
+msgstr "Encontrar Parceiros"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:222
 #: wp-content/themes/teamlab-blog-2-0/header.php:336
@@ -575,7 +607,7 @@ msgstr "Eventos"
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:250
 #: wp-content/themes/teamlab-blog-2-0/header.php:366
 msgid "Press downloads"
-msgstr "Downloads da imprensa"
+msgstr "Materiais para imprensa"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:253
 #: wp-content/themes/teamlab-blog-2-0/header.php:368
@@ -817,12 +849,12 @@ msgid "Workspace Editions"
 msgstr "Workspace Editions"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:211
-msgid "OFORMS"
+msgid "OFORMs"
 msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:215
 msgid "OFORMS, free <span class=\"nowrap\">ready-to-fill</span> out online document forms"
-msgstr "OFORMS, formulários de documentos online gratuitos e prontos para preencher"
+msgstr "OFORMs, formulários de documentos online gratuitos e prontos para preencher"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:240
 msgid "Redmine"
@@ -865,6 +897,34 @@ msgstr "Apps para desktop e celular"
 #: wp-content/themes/teamlab-blog-2-0/header.php:313
 msgid "Other products"
 msgstr "Outros produtos"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:228
+msgid "All"
+msgstr "Tudo"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:231
+msgid "ONLYOFFICE for education"
+msgstr "ONLYOFFICE para a Educação"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:235
+msgid "Edit and collaborate on docs within your eLearning platform"
+msgstr "Edite e colabore em documentos em sua plataforma de eLearning"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:275
+msgid "Connectors"
+msgstr "Conectores"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:290
+msgid "Bundles"
+msgstr "Pacotes"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:295
+msgid "Web hosting"
+msgstr "Hospedagem de sites"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:298
+msgid "Get web hosting from some of the best providers"
+msgstr "Obtenha hospedagem na Web de alguns dos melhores provedores"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:320
 msgid "Choose the ONLYOFFICE edition that suits you best."
@@ -1011,6 +1071,10 @@ msgstr "Lançamentos de produtos"
 msgid "For developers"
 msgstr "Para desenvolvedores"
 
+#: wp-content/themes/teamlab-blog-2-0/index.php:288
+msgid "For community"
+msgstr "Para a comunidade"
+
 #: wp-content/themes/teamlab-blog-2-0/index.php:115
 #: wp-content/themes/teamlab-blog-2-0/index.php:208
 msgid "For business"
@@ -1080,10 +1144,10 @@ msgstr "Ver todas as <div class=\"no-wrap\">gravações&nbsp;<div class=\"grey-a
 msgid "Features"
 msgstr "Características"
 
-msgid "PDF reader&converter"
+msgid "PDF reader & converter"
 msgstr "Leitor e conversor de PDF"
 
-msgid "See it in action"
+msgid "See it in action!"
 msgstr "Veja-o em ação!"
 
 msgid "Curious to know what the interface looks like and try the main functionality?"
@@ -1092,14 +1156,20 @@ msgstr "Você tem curiosidade para saber como é a interface e experimentar a fu
 msgid "For business"
 msgstr "Para uso empresarial"
 
-msgid "API documentation"
+msgid "API Documentation"
 msgstr "Documentação de API"
 
-msgid "DESKTOP&MOBILE APPS"
-msgstr "APLICATIVOS PARA COMPUTADOR E DISPOSITIVOS MÓVEIS"
+msgid "Conversion API"
+msgstr "API de conversão"
 
-msgid "OTHER INTEGRATIONS"
-msgstr "OUTRAS INTEGRAÇÕES"
+msgid "Get it now"
+msgstr "Obter agora"
+
+msgid "Desktop & mobile apps"
+msgstr "Aplicativos para computador e dispositivos móveis"
+
+msgid "Other Integrations"
+msgstr "Outras integrações"
 
 #~ msgid "ONLYOFFICE joins the Linux Foundation as a silver member"
 #~ msgstr "O ONLYOFFICE se junta à Linux Foundation como um membro prateado"
